# codbot

./: .pgm  .yaml  LICENSE  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/astra_camera/: AstraConfig.h  UVCCameraConfig.h
devel/include/codbot_follower/: FollowerConfig.h
devel/include/codbot_lidar_follower/: position.h
devel/include/codbot_line_follower/: pos.h
devel/include/opencv_apps/: EdgeDetectionConfig.h  FaceRecognitionConfig.h  HoughCirclesConfig.h  HoughLinesConfig.h  PyramidsConfig.h  SmoothingConfig.h  ThresholdConfig.h
devel/lib/astra_camera/: astra_camera_node  astra_list_devices  astra_test_wrapper  camera_node
devel/lib/cartographer_ros/: cartographer_dev_pbstream_trajectories_to_rosbag  cartographer_dev_rosbag_publisher  cartographer_dev_trajectory_comparison  cartographer_pbstream_map_publisher  cartographer_pbstream_to_ros_map  cartographer_rosbag_validate
devel/lib/codbot_base/: codbot_base_node
devel/lib/codbot_bringup/: base_controller  pid_set
devel/lib/codbot_line_follower/: detect  navig
devel/lib/exploration_server/: plugin_client  (+1 more)
src/: .pgm  .yaml  README.md
src/GFD_test/: CMakeLists.txt  package.xml  test_lidar.launch
src/codbot_sensor/camera_driver/ros_astra_launch/: package.xml
src/codbot_sensor/codbot_base/: CMakeLists.txt
src/codbot_sensor/codbot_base/include/codbot_base/: codbot_base.h
src/codbot_sensor/codbot_base/launch/: codbot_all_sensor.launch  codbot_base.launch  codbot_base_camera.launch  codbot_base_lidar.launch  codbot_camera.launch  codbot_lidar.launch
src/codbot_sensor/codbot_base/launch/camera/: astrapro.launch
src/codbot_sensor/codbot_base/launch/lidar/: rplidar.launch  ydlidar.launch  ydlidar_x2l.launch
src/codbot_sensor/codbot_base/src/: codbot_base.cpp  main.cpp
src/environment/calibration_base/: CMakeLists.txt  check_linear.py
src/robot_pose_ekf/: package.xml
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
(+248 files in other folders)
